Class data routes, absence info routes, ping route
